info bar created

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 			</nav>
 			<a class="cta" href="https://aabsport.dk/"><button>Kontakt</button></a>
 		</header>
+
+		<div class="container">
+			<div class="info-item empty"></div>
+			<div class="info-item a"><p>Kampe</p></div>
+			<div class="info-item b"><p>Kampprogram</p></div>
+			<div class="info-item c"><p>Køb abonnement fra 85,-/md</p></div>
+			<div class="info-item d"><p>Ikoner</p></div>
+			<div class="info-item e"><p>Spar Nord</p></div>
+			<div class="info-item empty"></div>
+		</div>
+
 		<section class="front">
 			
 		</section>
