added two images

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 			<div class="info-item e"><p>Spar Nord</p></div>
 			<div class="info-item empty"></div>
 		</div>
-
-		<section class="front">
-			
-		</section>
+		<div class="image-container">
+			<div class="info-item empty"></div>
+			<div class="image"><img src="https://aabsport.dk/media/17222/select2021.png?center=0.54618473895582331,0.34491978609625668&mode=crop&width=1000&heightratio=0.68&format=jpg&quality=90&slimmage=true&rnd=132551956780000000" alt="ball"></div>
+			<div class="image"><img src="https://aabsport.dk/media/17328/aab-rfc212.jpg?center=0.30693069306930693,0.36423841059602646&mode=crop&width=650&heightratio=1.4923076923076923076923076923&format=jpg&quality=90&slimmage=true&rnd=132578682590000000" alt="Granli"></div>
+			<div class="info-item empty"></div>
+		</div>
 	</body>
 </html>
